admin filtering fixes

--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -134,8 +134,9 @@ var org_list = {};
       org_list["{{org}}"] = true;
   {% endfor %}
 {% endif %}
-var AT = new AdminTool();
+var AT = new AdminTool({{user.id}}, "adminList");
 $(document).ready(function() {
+  AT.getTablePreference({{user.id}}, AT.tableIdentifier);
   AT.initOrgsList(org_list, 'admin');
   setTimeout(function() { AT.fadeLoader(); }, 500);
 });
