fix codacy-bot issues

--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -134,7 +134,7 @@ var org_list = {};
       org_list["{{org}}"] = true;
   {% endfor %}
 {% endif %}
-var AT = new AdminTool({{user.id}}, "adminList");
+var AT = new window.portal.AdminTool({{user.id}}, "adminList");
 $(document).ready(function() {
   AT.getTablePreference({{user.id}}, AT.tableIdentifier);
   AT.initOrgsList(org_list, 'admin');
