--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -131,7 +131,7 @@
 {{footer(user=user)}}
 {% endblock %}
 {% block document_ready %}
-var AT = new AdminTool({{user.id}}, "patientList");
+var AT = new window.portal.AdminTool({{user.id}}, "patientList");
 var sortObj = AT.getTablePreference({{user.id}});
 /*
 * initializing bootstrapTable
@@ -170,6 +170,19 @@ $(document).ready(function() {
      *  hide checkbox for hidden id field from side menu
      */
     $("input[data-field='id']:checkbox").hide();
+     /*
+      * add placeholder text for filter controls
+      */
+    (function() {
+       function addFilterPlaceHolders() {
+         $("#adminTable .filterControl input").attr("placeholder", "{{_('Enter Text')}}");
+         $("#adminTable .filterControl select option[value='']").text("Select");
+       }
+       $("#adminTable").on("reset-view.bs.table", function() {
+          addFilterPlaceHolders();
+       });
+       addFilterPlaceHolders();
+    })();
     AT.rowLinkEvent();
     AT.setColumnSelections();
     AT.initOrgsList(false, "patients");
