--- a/portal/templates/research.html
+++ b/portal/templates/research.html
@@ -59,7 +59,7 @@
 {{footer(user=user)}}
 {% endblock %}
 {% block document_ready %}
-var AT = new AdminTool({{user.id if user}});
+var AT = new window.portal.AdminTool({{user.id if user}});
 $(document).ready(function() {
     AT.fadeLoader();
     AT.initOrgsList();
