add UI changes for deleted users staff/admin html

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -907,6 +907,9 @@ div.footer-wrapper.right-panel {
   th.visit-field {
     min-width: 150px;
   }
+  tr.deleted-user-row {
+    opacity: @disabledOpacity;
+  }
 }
 .truenth-id-label {
    display: none;
