--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -38,17 +38,19 @@
                 <th data-field="lastname" data-sortable="true" data-filter-control="input">{{ _("Last Name") }}</th>
                 <th data-field="email" data-sortable="true" class="email-data-field" data-filter-control="input">{{ _("Email") }}</th>
                 <th data-field="organization" data-sortable="true" class="org-data-field" data-filter-control="select">{{ _("Site(s)") }}</th>
+                <th class="text-center"><em>{{ _("Delete") }}</em> {{ _("User") }}</span></th>
             </tr>
             </thead>
             <tbody data-link="row" class="rowlink">
             {% for user in staff_list %}
-              <tr id="data_row_{{user.id}}">
-                  <td>{{user.id}}</td>
+              <tr id="data_row_{{user.id}}" {%if user.deleted%}class="rowlink-skip deleted-user-row"{%endif%}>
+                  <td>{{user.id}}{{user.deleted_id}}</td>
                   <td><a href="{{ url_for('portal.profile', user_id=user.id) }}">{{ user.id }}</a></td>
                   <td>{{ user.first_name if user.first_name }}</td>
                   <td>{{ user.last_name if user.last_name }}</td>
                   <td class="email-data-field">{{ user.email if user.email }}</td>
                   <td class="org-data-field">{% for org in user.organizations | sort(attribute='id') %}<span class="medium-text">{{org.name}}</span><br/>{% endfor %}</td>
+                  <td class="text-center deleted-button-cell">{%if not user.deleted %}<button onclick="AT.deleteUser(event, '{{user.id}}')" type="button" class="btn btn-default"><em>Delete</em></button>{%else%}-{%endif%}</td>
               </tr>
             {% endfor %}
             </tbody>
@@ -62,7 +64,19 @@
 {% block script %}
 <script src="{{ url_for('static', filename='js/bootstrap.rowlink.js') }}" async></script>
 {% endblock %}
+{% block table_export_filter_script %}
+{{super()}}
+<script src="{{ url_for('static', filename='js/admin.js') }}"></script>
+{% endblock %}
 {% block document_ready %}
+var AT = new window.portal.AdminTool(
+{{user.id}},
+"adminList",
+{
+  "tnthAjax": tnthAjax,
+  "i18next": i18next,
+  "tnthDates": tnthDates
+});
 $("#adminTable").bootstrapTable({
     formatShowingRows: function (pageFrom, pageTo, totalRows) {
         var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
@@ -77,16 +91,20 @@ $("#adminTable").bootstrapTable({
 /*
  * add placeholder text for filter controls
  */
- (function() {
-   function addFilterPlaceHolders() {
-     $("#adminTable .filterControl input").attr("placeholder", "Enter Text");
-     $("#adminTable .filterControl select option[value='']").text("Select");
-   }
-   $("#adminTable").on("reset-view.bs.table", function() {
-      addFilterPlaceHolders();
-   });
-   addFilterPlaceHolders();
- })();
+(function() {
+  function addFilterPlaceHolders() {
+    $("#adminTable .filterControl input").attr("placeholder", "Enter Text");
+    $("#adminTable .filterControl select option[value='']").text("Select");
+  }
+  $("#adminTable").on("reset-view.bs.table", function() {
+    addFilterPlaceHolders();
+  });
+  addFilterPlaceHolders();
+})();
+$(document).ready(function() {
+  setTimeout(function() { AT.fadeLoader(); }, 100);
+});
+
 
 /** Example of how we could have a select to limit to a particular role. Needs more work
 because only looks at entire field
