fix truenth image in footer, css fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -482,6 +482,7 @@ select:not([multiple]) {
     clear: both;
     display:flex;
     padding: 1em 0.8em;
+    margin: 0 0.5em;
     border-top: 1px solid #ddd;
     justify-content: space-around;
   }
