--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1674,7 +1674,7 @@ div.pull-right {
   & .copyright-container {
     font-size: @footerSize;
     color: @footerWhiteThemeColor;
-    width: 65%;
+    width: 50%;
   }
   .footer-container.flex {
     clear: both;
@@ -2831,6 +2831,9 @@ div.timezone-warning.text-warning {
       .profile-item-title  {
         max-width: 100%;
       }
+    }
+    .copyright-container {
+      width: 65%;
     }
   }
   .timezone-container {
