--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -50,7 +50,7 @@
                   <td>{{ user.last_name if user.last_name }}</td>
                   <td class="email-data-field">{{ user.email if user.email }}</td>
                   <td class="org-data-field">{% for org in user.organizations | sort(attribute='id') %}<span class="medium-text">{{org.name}}</span><br/>{% endfor %}</td>
-                  <td class="text-center deleted-button-cell">{%if not user.deleted %}<button onclick="AT.deleteUser(event, '{{user.id}}')" type="button" class="btn btn-default"><em>Delete</em></button>{%else%}-{%endif%}</td>
+                  <td class="text-center deleted-button-cell">{%if not user.deleted %}<button onclick="AT.deleteUser(event, '{{user.id}}')" type="button" class="btn btn-default"><em>Delete</em></button>{%else%}{{ _("Inactive") }}{%endif%}</td>
               </tr>
             {% endfor %}
             </tbody>
