--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -759,14 +759,12 @@
                             if ($("#" + state + "_container").length > 0) {
                                 var oo = orgsList[item.id];
                                 if (oo.children.length > 0) {
-                                    contentHTML = "<legend orgId='%orgId%'>%translatedOrgName%</legend>";
-                                    contentHTML += "<input class='tnth-hide' type='checkbox' name='organization' parent_org='true' org_name='%orgName%' ";
-                                    contentHTML += " id='%orgId%_org' value='%orgId%' />";
-                                    contentHTML = contentHTML.replace(/\%orgId\%/g, item.id)
-                                                            .replace(/\%orgName\%/g, item.name)
-                                                            .replace(/\%translatedOrgName\%/g, i18next.t(item.name));
-                                    
-                                    //contentHTML = "<legend orgId='" + item.id + "'>"+ i18next.t(item.name) +"</legend><input class='tnth-hide' type='checkbox' name='organization' parent_org='true' org_name='" + item.name + "' id='" + item.id + "_org' value='"+item.id+"' />";
+                                    contentHTML = "<legend orgId='{orgId}'>{translatedOrgName}</legend>";
+                                    contentHTML += "<input class='tnth-hide' type='checkbox' name='organization' parent_org='true' org_name='{orgName}' ";
+                                    contentHTML += " id='{orgId}_org' value='{orgId}' />";
+                                    contentHTML = contentHTML.replace(/\{orgId\}/g, item.id)
+                                                            .replace(/\{orgName\}/g, item.name)
+                                                            .replace(/\{translatedOrgName\}/g, i18next.t(item.name));
                                     $("#" + state + "_container").append(contentHTML);
                                 };
                             };
@@ -794,13 +792,13 @@
                                 })(parentId);
 
                                 contentHTML = "<div class='radio'>" +
-                                            "<label><input class='clinic' type='radio' id='%orgId%_org' value='%orgId%' state='%state%' name='organization' data-parent-name='%parentOrgName%' data-parent-id='%parentOrgId%'>%translatedOrgName%</label>" +
+                                            "<label><input class='clinic' type='radio' id='{orgId}_org' value='{orgId}' state='{state}' name='organization' data-parent-name='{parentOrgName}' data-parent-id='{parentOrgId}'>{translatedOrgName}</label>" +
                                             "</div>";
-                                contentHTML = contentHTML.replace(/\%orgId\%/g, item.id)
-                                                        .replace(/\%state\%/g, parentState)
-                                                        .replace(/\%parentOrgName\%/g, item.name)
-                                                        .replace(/\%parentOrgId\%/g, parentId)
-                                                        .replace(/\%translatedOrgName\%/g, i18next.t(item.name));
+                                contentHTML = contentHTML.replace(/\{orgId\}/g, item.id)
+                                                        .replace(/\{state\}/g, parentState)
+                                                        .replace(/\{parentOrgName\}/g, item.name)
+                                                        .replace(/\{parentOrgId\}/g, parentId)
+                                                        .replace(/\{translatedOrgName\}/g, i18next.t(item.name));
                                 
                                 if ($("#" + parentState + "_container legend[orgId='" + parentId + "']").length > 0) {
                                     $("#" + parentState + "_container legend[orgId='" + parentId + "']").after(contentHTML);
@@ -814,15 +812,15 @@
                     var selectOptions = $("#stateSelector").sortOptions();
                     if (selectOptions.length > 0) {
                         $("#stateSelector").empty().append(selectOptions)
-                          .append("<option value='none'>Other</option>")
-                          .prepend("<option value='' selected>Select</option>")
+                          .append("<option value='none'>{{_('Other')}}</option>")
+                          .prepend("<option value='' selected>{{_('Select')}}</option>")
                           .val("");
                         $(".state-container, .clinic-prompt").hide();
                         setTimeout(function() { OT.handlePreSelectedClinic();}, 500);
                         //case of pre-selected clinic, need to check if any clinic has prechecked
                         setTimeout(function() { handleCheckedItem();}, 500);
                         $("#userOrgs input[name='organization']").each(function() {
-                            if ($(this).val() != 0) OT.getDefaultModal(this);
+                            if (parseInt($(this).val()) !== 0) OT.getDefaultModal(this);
                         });
 
                         {% if person %} tnthAjax.getDemo({{person.id}}); {% endif %}
@@ -844,7 +842,7 @@
                 };
 
             }).fail(function(xhr) {
-                tnthAjax.sendError(xhr, '/api/organization', {{person.id if person}})
+                tnthAjax.sendError(xhr, "/api/organization", {{person.id if person}})
             });
         });
     </script>
@@ -913,7 +911,11 @@
                         </div>
                         <input type="hidden" class="agreement-url" value="{{consent_agreement.url|safe}}" />
                         <br/>
-                        <p>{{_("I consent to sharing information with ")}}<span class="consent-clinic-name">{{consent_agreement.organization_shortname}}</span>.</p>
+                        <p>
+                            {% trans org_shortname=consent_agreement.organization_shortname %}
+                                I consent to sharing information with <span class="consent-clinic-name">{{org_shortname}}</span>.
+                            {% endtrans %}
+                        </p>
                         <div id="{{org}}_consentAgreementRadioList" class="profile-radio-list">
                           <label class="radio-inline">
                               <input type="radio" name="toConsent" id="{{org}}_consent_yes" data-org="{{org}}" value="yes"/>
